Improve exam solution